[package]
name = "tokio-etcd"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7.1"
http = "1.1.0"
thiserror = "1.0.63"
tokio = "1.38.0"
tokio-stream = { version = "0.1.15", features = ["sync"] }
tonic = "0.12.1"
tracing = { version = "0.1.40", features = ["log"] }

tokio-etcd-grpc-client = { path = "./grpc-client" }
rand = "0.8.5"

[dev-dependencies]
expect-test = "1.5.0"
